# lottie-renderer-service

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  renovate.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: release.yaml
requests/: sticker.json  test.http
scripts/: build_rlottie.sh
src/: gif.rs  main.rs  webp.rs
