[package]
name = "lottie-renderer-service"
version = "0.1.1"
edition = "2021"
authors = ["Marie Ramlow <me@nycode.dev>", "Michael Rittmeister <michael@rittmeister.in>"]
description = "Small http microservice to render lottie animation files."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-utils = "3"
actix-cors = "0.6"
lottieconv = "0.2.0"
thiserror = "1"
sha256 = "1"
webp-animation = "0.9.0"
gif = "0.11"
